--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "server": "node --loader ts-node/esm server.ts",
-    "server:build": "tsc --project tsconfig.server.json",
-    "server:start": "node dist/server.js",
+    "server": "node server.cjs",
     "dev:full": "concurrently \"npm run dev\" \"npm run server\"",
     "build": "vite build",
     "build:dev": "vite build --mode development",
