--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "express": "^5.1.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "multer": "^1.4.5-lts.2",
     "next-themes": "^0.3.0",
     "node-forge": "^1.3.1",
     "react": "^18.3.1",
